# Calc24

./: .gitignore  README.md
Calc24Client/: CMakeLists.txt  Calc24Client.vcxproj  Calc24Client.vcxproj.filters  TCPClient.cpp  TCPClient.h
Calc24Server/: CMakeLists.txt  Calc24Server.cpp  Calc24Server.vcxproj  Calc24Server.vcxproj.filters  Player.cpp  TCPServer.cpp  TCPServer.h
v1/: Calc24.sln
v1/Calc24Client/: Calc24Client.cpp
v1/Calc24Server/: CMakeLists.txt  Calc24Server.cpp  Calc24Server.vcxproj  Calc24Server.vcxproj.filters  Player.h  TCPServer.h  protocol.h
v2/: CMakeLists.txt  Calc24Server程序框架示意图.drawio  calc24v2.sln  calc24v2.vcxproj  calc24v2.vcxproj.filters  关闭流程.drawio
v2/appsrc/: Calc24Protocol.h  Calc24Server.cpp  Calc24Server.h  Calc24Session.cpp  Calc24Session.h  main.cpp
v2/calc24v2/x64/Debug/: vc143.idb
v2/calc24v2/x64/Debug/calc24v2.tlog/: calc24v2.lastbuildstate
v2/net/: Acceptor.cpp  Acceptor.h  ByteBuffer.cpp  ByteBuffer.h  Epoll.cpp  Epoll.h  EventLoop.cpp  EventLoop.h  IEventDispatcher.h  IOMultiplex.h  ITimerService.h  Poll.cpp  Poll.h  Select.cpp  Select.h  TCPConnection.cpp  TCPConnection.h  TCPServer.cpp  TCPServer.h  ThreadPool.cpp  ThreadPool.h  Timer.cpp  Timer.h  WakeupEventDispatcher.cpp  WakeupEventDispatcher.h
v2/utils/: util.cpp  util.h
